Changed css of figures (in favor of dynamic height) and fixed a bug with code white space

--- a/css/screen.css
+++ b/css/screen.css
@@ -336,12 +336,13 @@ article {
 figure {
 background: white;
 width: 550px;
-height: 270px;
+min-height: 270px;
 margin: 24px auto 55px;
 
 border: 1px solid #AAA;
 box-shadow: 0px 1px 2px rgba(0,0,55,0.5);
 position: relative;
+margin-bottom: 10px;
 }
 
 figure > .resetButton {
@@ -490,7 +491,7 @@ padding: 1px 3px
 }
 
 /* Code block */
-pre > code {
+article > pre > code {
 	background-color: #fcfcfc;
 	border-radius: 3px;
 	border: 1px solid #cbcac2;
